fix layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,6 @@
 @layer base {
   body {
     @apply bg-gray-100 font-sans;
+    overflow-y: scroll;
   }
 }
